Bug #48436 Incorrect handling of redo-intervals after node-failure during node-restart
Submitted: 30 Oct 14:47 Modified: 30 Oct 20:06
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:mysql-5.1-telco-6.2 OS:Any
Assigned to: Jonas Oreland Target Version:

[30 Oct 14:47] Jonas Oreland
Description:
Randomly
1) starting node
2) crashing node during restart
3) system restart

could lead to incorrect handling of meta-data for REDO log,
causing "Error while reading REDO log" to happen during the system restart

How to repeat:
testNodeRestart -n NFDuringRestart long enough
or my new test-prg

Suggested fix:
keep meta-data correct!
[30 Oct 14:56] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/88748

3147 Jonas Oreland	2009-10-30
      ndb - bug#48436 - cleanup of crashedreplica handling in dih
[30 Oct 15:13] Jonas Oreland
pushed 6.3.29 and 7.0.10
[30 Oct 20:06] Jon Stephens
Documented bugfix in the NDB.7.0.10 changelog as follows:

        A data node crashing while restarting, followed by a system
        restart could lead to incorrect handling of redo log metadata,
        causing the system restart to fail with Error while reading 
        REDO log.

Closed.