ndb - bug#48436 - cleanup of crashedreplica handling in dih