storage/ndb/src/kernel/blocks/dblqh/DblqhMain.cpp
@@ -11727,6 +11727,7 @@ void Dblqh::execLCP_FRAG_ORD(Signal* signal)
   lcpPtr.p->lastFragmentFlag = lcpFragOrd->lastFragmentFlag;
   if (lcpFragOrd->lastFragmentFlag) {
     jam();
+    CRASH_INSERTION(5054);
     if (lcpPtr.p->lcpState == LcpRecord::LCP_IDLE) {
       jam();
       /* ----------------------------------------------------------
